# OpenHPSDR-SVN

./: README.md
Alex Filter Test Board/: LDD.spl  NCD_PTH.spl  REPORT_ALEX.REP  SMB.spl
Atlas/: Atlas Bus pin definitions.xls  Atlas to Janus V2 and Ozy Interface.xls  Atlas to Janus V2 and Ozy V2 Interface.xls  Atlas to Janus V2- OzyV2- Penelope  Interface.xls
Documentation/: Atlas Bus pin definitions.xls  Metis- How it works.doc  Test.doc  USB protocol V1.29.doc  USB protocol V1.30.doc  USB protocol V1.31.doc  USB protocol V1.32.doc  USB protocol V1.33.doc  USB protocol proposal  V1.12.doc  USB protocol proposal  V1.14.doc  USB protocol proposal  V1.15.doc  USB protocol proposal  V1.16.doc  USB protocol proposal  V1.17.doc  USB protocol proposal  V1.18.doc  USB protocol proposal  V1.20.doc  USB protocol proposal  V1.21.doc  USB protocol proposal  V1.22.doc  USB protocol proposal  V1.24.doc  USB protocol proposal  V1.25.doc  USB_ protocol_ V1.35.doc  USB_ protocol_ V1.37.doc  USB_ protocol_ V1.41.doc  USB_ protocol_ V1.42.doc  USB_protocol_V1.44.doc  USB_protocol_V1.46.doc  USB_protocol_V1.47.doc  USB_protocol_V1.50.doc  USB_protocol_V1.54.doc  USB_protocol_V1.59.doc  USB_protocol_V1.60.doc
Janus-CPLDV2/: Janus.asm.rpt  Janus.cdf  Janus.done  Janus.fit.rpt  Janus.fit.summary  Janus.flow.rpt  Janus.map.rpt  Janus.map.summary  Janus.pin  Janus.pof  Janus.qsf  Janus.qws  Janus.sim.rpt  Janus.tan.rpt  Janus.tan.summary  Janus.v
Janus-CPLDV3/: Janus.qsf
Mercury/: Mercury.cdf  Mercury.done  Mercury.pin  Mercury.qsf  Programming EPCS16 or M25P16.txt  cic_4_1_12_nofraction.v  dc_offset_correct_new.v  oddClockDiv.v
Mercury V2/: Mercury.asm.rpt  Mercury.cdf  Mercury.done  Mercury.fit.rpt  Mercury.fit.summary  Mercury.flow.rpt  Mercury.map.rpt  Mercury.map.summary  Mercury.pin  Mercury.pof  Mercury.qsf  Mercury.qws  Mercury.rbf  Mercury.sof  Mercury.tan.rpt  Mercury.tan.summary  Mercury.v  Mercury.v.bak  Mercury_2.4.jic  cic_integrator.v  cordic.v  fir.v  random.v  spectrum_FIFO.v
Mercury V2.7/: Mercury.cdf  Mercury.fit.rpt  Mercury.map  Mercury.map.summary  Mercury.qpf  Mercury.v.bak  Mercury_V2.7.jic  SP_fifo.v  serv_req_info.txt
Mercury_V3.1/: Mercury.archive.rpt  Mercury.map.rpt  Mercury.map.smsg  Mercury.restore.rpt  Mercury.sof  Mercury.v.bak  PLLJ_PLLSPE_INFO.txt  receiver.v  sp_xmit_ctrl.v  varcic.v
Mercury_V3.3/: C10_PLL.ppf  Mercury.v  Mercury_V3.3.pof  Mercury_V3.3.sof  Mercury_v3.3.pof  Mercury_v3.3.qar  Mercury_v3.3.qarlog  Mercury_v3.3.rbf  SP_fifo.qip  SP_fifo_bb.v
N6LYT/: .ghpsdr.properties  Makefile  audio.c  band.c  cw.h  filter.c  main.h  mercury.c  mode.c  ozy_buffers.c  ozy_buffers.h  soundcard.c  spectrum.c  spectrum_update.h
N6LYT/ghpsdr3/trunk/src/receiver/DttSP/: Makefile  bootstrap  config.status  configure.ac
N6LYT/ghpsdr3/trunk/src/receiver/DttSP/.deps/: correctIQ.Po  dcblock.Po  filter.Po  fm_demod.Po  meter.Po  noiseblanker.Po  resampleF.Po  spectrum.Po
N6LYT/ghpsdr3/trunk/src/receiver/DttSP/autom4te.cache/: output.0  requests  traces.0  traces.1
N8VB/: readme.txt
NH6Z/: test
OZY2-test/: OzyTestImage V2.v  TestImage.asm.rpt  TestImage.fit.rpt  TestImage.fit.summary  TestImage.flow.rpt  TestImage.map.rpt  TestImage.map.summary  TestImage.pin  TestImage.qws  TestImage.sof  TestImage.tan.rpt  TestImage.tan.summary
Ozy V1.2/: HPF_select.v  Ozy_Janus.done  Ozy_Janus.drc.rpt  Ozy_Janus.fit.summary  Ozy_Janus.flow.rpt  Ozy_Janus.map.rpt  Ozy_Janus.map.summary  Ozy_Janus.pof  Ozy_Janus.qsf  Ozy_Janus.rbf  Ozy_Janus.sof  Ozy_Janus.tan.rpt  Ozy_Janus.tan.summary  Ozy_Janus.v  Ozy_Janus_assignment_defaults.qdf  led_blinker.v  sim.v
Ozy V1.4/: Ozy_Janus.tan.rpt  Tx_fifo_bb.v  Tx_fifo_waveforms.html
Ozy V1.7/: CC_address.stp  Ozy_Janus.asm.rpt  Ozy_Janus.done  Ozy_Janus.fit.rpt
Ozy V1.8/: Ozy_Janus.map.rpt  Ozy_Janus.tan.rpt  cy7c68013_usb.v
Ozy V1.8a/: Ozy_Janus.asm.rpt  Ozy_Janus.done  Ozy_Janus.drc.rpt  Ozy_Janus.eda.rpt  Ozy_Janus.fit.rpt  Ozy_Janus.fit.summary  Ozy_Janus.flow.rpt  Ozy_Janus.map.summary  Ozy_Janus.pin  Ozy_Janus.pof  Ozy_Janus.qsf  Ozy_Janus.rbf  Ozy_Janus.sof  Ozy_Janus.tan.rpt  Ozy_Janus.tan.summary  Ozy_Janus.v.bak
Ozy V1.9/: Ozy_Janus.pin  TestModeCheck.stp  Tx_fifo_ctrl.v.bak
Ozy V2.0/: Ozy_Janus.asm.rpt  Ozy_Janus.tan.rpt  Ozy_Janus.v  Tx_fifo_ctrl.v
Ozy-JanusV2/: OZYV1FW.hex  Ozy_Janus.done  Ozy_Janus.done.r316  Ozy_Janus.fit.summary  Ozy_Janus.flow.rpt  Ozy_Janus.map.rpt  Ozy_Janus.map.rpt.mine  Ozy_Janus.map.summary  Ozy_Janus.qws.r254  Ozy_Janus.rbf  Ozy_Janus.sof.r354  Ozy_Janus.tan.rpt
OzyFX2/: .cdtbuild
OzyJanus-Jack/: configure.ac
OzyJanus-Jack/autom4te.cache/: output.1  requests  traces.1
OzyJanus-Jack/debug/: .kdbgrc.loadFW  .kdbgrc.read_i2c  Makefile.in
OzyJanus-Jack/install/: Setspeed
OzyJanus-Jack/src/: private.h
OzyUtil-NativeWin/: OzyUtils.sln
Ozymandias/Source/Utilities/OzyJanus-Jack/debug/: Makefile.am
Ozymandias/Source/Utilities/OzyJanus-Jack/object/: Makefile.am
trunk/N5EG/GRC3.7/gr-hpsdr/lib/: CMakeLists.txt  HermesProxy.cc  HermesProxy.h  HermesProxyW.cc  HermesProxyW.h  hermesNB_impl.cc  hermesNB_impl.h  hermesWB_impl.cc  metis.cc  qa_hpsdr.cc  test_hpsdr.cc
trunk/Ozymandias/Source/Utilities/OzyJanus-Jack/: ChangeLog  Makefile.am
trunk/Ozymandias/Source/Utilities/OzyJanus-Jack/autom4te.cache/: traces.0
trunk/Ozymandias/Source/Utilities/OzyJanus-Jack/src/: OZY.c  complex.h  hpsdrusb.h  loadFPGA.c  ozyjack.c  resampleFOJ.c  resampleFOJ.h  write_i2c.c
trunk/vu3rdd/hpsdr/ozy/firmware/include/: Makefile.am  hpsdr_commands.h  isr.h
vu3rdd/hpsdr/ozy/firmware/: Makefile  Makefile.am  aclocal.m4  config.status  configure.ac
vu3rdd/hpsdr/ozy/firmware/autom4te.cache/: output.1  requests  traces.0
vu3rdd/hpsdr/ozy/firmware/config/: fusb_tech.m4  ozy.m4
vu3rdd/hpsdr/ozy/firmware/include/: Makefile.am  hpsdr_globals.h  hpsdr_ids.h  hpsdr_rev1_regs.h  syncdelay.h
vu3rdd/hpsdr/ozy/firmware/lib/: Makefile.in  fx2utils.c  i2c.c
vu3rdd/hpsdr/ozy/firmware/src/: Makefile  Makefile.am  Makefile.in  fpga_load.c  hpsdr_common.c  hpsdr_main.c  sdr1kctl.c
(+15644 files in other folders)
