#
# HPSDR/OZY - High Performance Software Defined Radio, OZY Firmware
# adapted from GNU Radio code by Ramakrishnan Muthukrishnan <vu3rdd@gmail.com>
# on 21st Nov 2007
#
# Copyright 2003 Free Software Foundation, Inc.
# 
# This file is part of GNU Radio
# 
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
# 
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
# 

include_HEADERS = 		\
	hpsdr_i2c_addr.h		\
	hpsdr_spi_defs.h		

noinst_HEADERS =		\
	delay.h			\
	eeprom_io.h             \
	fpga.h                  \
	fpga_load.h             \
	fpga_regs_common.h	\
	fpga_rev1.h             \
	fx2regs.h		\
	fx2utils.h		\
	hpsdr_commands.h        \
	hpsdr_common.h          \
	hpsdr_config.h          \
	hpsdr_globals.h         \
	hpsdr_ids.h             \
	hpsdr_i2c_addr.h        \
	hpsdr_interfaces.h      \
	hpsdr_rev1_regs.h       \
	hpsdr_spi_defs.h        \
	i2c.h			\
	isr.h			\
	sdr1kctl.h              \
	spi.h                   \
	syncdelay.h		\
	timer.h			\
	usb_common.h		\
	usb_descriptors.h	\
	usb_requests.h		\

